// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Border Radius should render 1`] = `
.c0 {
  border-radius: 0.125rem;
}

.c1 {
  display: block;
}

<div>
  <div
    class="c0 c1"
    data-testid="block"
  >
    Default Text
  </div>
</div>
`;

exports[`Colors should render 1`] = `
.c0 {
  background-color: #38b2ac;
}

.c1 {
  display: block;
}

<div>
  <div
    class="c0 c1"
    data-testid="block"
  >
    Default Text
  </div>
</div>
`;
